--- a/tubescribe/templates/test.html
+++ b/tubescribe/templates/test.html
@@ -8,12 +8,31 @@
     <div class="col-md-12">
       <form action="." class="form-horizontal" method="POST" id="post-form">
         {% csrf_token %}
-        <div class="text-center">
-          <h3>Enter the youtube URL to convert make a supercut video</h3>
+        <div id="main" class="text-center">
+          <h3>Enter the youtube URL to convert make a supercut video - Test</h3>
+        </div>
+        <div class="col-md-6 col-md-offset-2">
+          <div class="col-md-0 col-md-offset-0" id="result1">
+
+        
+
+          </div>
+
+
+
+        </div>
+        
+        <div class="col-md-6 col-md-offset-3">
+          <div class="col-md-6 col-md-offset-3" id="result2"></div>
+
         </div>
         <div class="col-md-6 col-md-offset-3">
-          <div class="col-md-6 col-md-offset-3" id="result"></div>
+          <div class="col-md-6 col-md-offset-3" id="result3"></div>
+
         </div>
+        
+
+
         <div class="form-group">
           <div class="col-md-6 col-md-offset-3">
             <input id="youtubeUrl" type="url" name="url" class="form-control input-lg" placeholder="e.g. https://www.youtube.com/watch?v=MN6YOAYb_M0" onclick="" >
